# dream-emulator

./: .gitignore  MULTIPLAYER.md  README.md  package-lock.json  package.json  puuush.sh
docs/: ARCHITECTURE.md  ASSETS.md  EXAMPLES.md  IMP.md  MULTIPLAYER.md  PLUGINS.md  START.md  TECH.md  VISUAL_SCRIPTING.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/engine/: Cargo.toml  build.rs
src-tauri/engine/src/: lib.rs
src-tauri/engine/src/assets/: cache.rs  loader.rs  manager.rs  mod.rs
src-tauri/engine/src/compiler/: builder.rs  mod.rs
src-tauri/engine/src/ecs/: component.rs  mod.rs  query.rs  system.rs  world.rs
src-tauri/engine/src/math/: mod.rs  quaternion.rs  transform.rs  vectors.rs
src-tauri/engine/src/physics/: collision.rs  mod.rs  rigid_body.rs  world.rs
src-tauri/engine/src/renderer/: canvas_renderer.rs  mod.rs  traits.rs  wgpu_renderer.rs
src-tauri/engine/zig/: build.zig  math.zig  physics.zig
src-tauri/src/: lib.rs  main.rs
src/compiler/: index.ts  node-definitions.ts  visual-script-compiler.ts
src/components/GameCreator/: TopDownGameCreator.module.css  TopDownGameCreator.tsx  index.ts
src/components/MainMenu/: MainMenu.module.css  MainMenu.tsx  index.ts
src/hooks/: useGameEngine.ts
src/store/: index.ts
src/styles/: global.css
