# src-tauri/engine/Cargo.toml
[package]
name = "dream-engine"
version = "0.1.0"
edition = "2021"
authors = ["Dream Emulator Team"]
description = "High-performance game engine that compiles visual scripts to native code"
license = "MIT OR Apache-2.0"

[features]
default = []
tauri-integration = ["dep:once_cell"]
wgpu-backend = ["dep:wgpu"]
hot-reload = ["dep:notify"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Math (using our own implementation, but these are alternatives)
# glam = "0.24"  # Alternative math library
# nalgebra = "0.32"  # Another alternative

# ECS alternatives for reference
# hecs = "0.10"  # Archetype-based ECS
# bevy_ecs = "0.11"  # Bevy's ECS

# Rendering
wgpu = { version = "0.18", optional = true }

# Asset loading
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

# Async runtime for asset loading
tokio = { version = "1", features = ["fs", "io-util"] }

# Memory mapping for zero-copy assets
memmap2 = "0.9"

# Utilities
once_cell = { version = "1.18", optional = true }
parking_lot = "0.12"  # Better mutex implementation

# Hot reload support
notify = { version = "6.0", optional = true }

# Logging
log = "0.4"

# Random number generation
rand = "0.8"

# Time handling
instant = "0.1"

# Platform-specific optimizations
[target.'cfg(target_arch = "x86_64")'.dependencies]
# Could add SIMD crates here if needed

[dev-dependencies]
criterion = "0.5"  # Benchmarking
proptest = "1.3"   # Property-based testing

[[bench]]
name = "ecs_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"

# Special profile for hot-reload development
[profile.dev-fast]
inherits = "dev"
opt-level = 1